# murim

./: .gitignore  index.html  script.js  style.css
.github/workflows/: build.yml
Nautica-Premium/: .dev.vars.example  index.html  worker.js
Nautica-Premium/src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
Nautica-Premium/src/components/layout/: TopNav.tsx
Nautica-Premium/src/components/nautica/: AppLayout.tsx  ArtCard.tsx  Shell.tsx  ThemeToggle.tsx
Nautica-Premium/src/components/ui/: ErrorBoundary.tsx
Nautica-Premium/src/hooks/: use-theme.tsx
Nautica-Premium/src/lib/: api.ts  mock-data.ts  nautica.functions.ts
Nautica-Premium/src/pages/: Home.tsx
Nautica-Premium/src/pages/dex/: AddLiquidity.tsx
Nautica-Premium/src/pages/nft/: CollectionDetail.tsx  CreateNFT.tsx  MyNFTs.tsx  NFTMarketplace.tsx
Nautica-Premium/src/pages/settings/: Networks.tsx  Notifications.tsx  Profile.tsx  Settings.tsx
Nautica-Premium/src/pages/zk/: ZKHistory.tsx  ZKVerify.tsx
Nautica-Premium/src/routes/: __root.tsx  activity.tsx  create.tsx  drops.tsx  index.tsx  market.$id.tsx  market.tsx  profile.tsx  send.tsx  sitemap[.]xml.ts  swap.tsx
murim-game/: CMakeLists.txt  GAME_DESIGN_DOCUMENT.md  README.md
murim-game/.github/workflows/: build.yml
murim-game/assets/data/: npcs.json  quests.json  sects.json  tilemap.json  world_config.json
murim-game/src/: main.c
murim-game/src/engine/: camera.c  camera.h  particles.c  particles.h  renderer.c  renderer.h  types.h  weather.c  weather.h
murim-game/src/game/: alchemy.c  alchemy.h  audio_sys.c  audio_sys.h  bestiary.c  bestiary.h  bounty.c  bounty.h  combat.c  combat.h  cultivation.c  cultivation.h  dungeon.c  dungeon.h  elements.c  elements.h  environment.c  environment.h  events.c  events.h  exploration.c  exploration.h  fishing.c  fishing.h  mounts.c  mounts.h  npc.c  npc.h  quests.c  quests.h  reputation.c  reputation.h  save.c  save.h  standoff.c  standoff.h  taming.c  taming.h  world.c  world.h
murim-game/src/ui/: hud.c  hud.h  system_ui.c  system_ui.h
murim-game/tools/: world_gen.py
